src/ast/parser.py
import ply.yacc as yacc

from tokrules import tokens

counter = 0

def p_empty(p):
	'empty :'
	pass

def p_keyword_package(p):
	'''
	keyword_package : PACKAGE
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_identifier(p):
	'''
	keyword_identifier : IDENTIFIER
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_import(p):
	'''
	keyword_import : IMPORT
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_lparen(p):
	'''
	keyword_lparen : LPAREN
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_rparen(p):
	'''
	keyword_rparen : RPAREN
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_dot(p):
	'''
	keyword_dot : DOT
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_lcurly(p):
	'''
	keyword_lcurly : LCURLY
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_rcurly(p):
	'''
	keyword_rcurly : RCURLY
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_const(p):
	'''
	keyword_const : CONST
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_eq(p):
	'''
	op_eq : EQ
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_identifier(p):
	'''
	identifier : IDENTIFIER
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_comma(p):
	'''
	keyword_comma : COMMA
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_type(p):
	'''
	keyword_type : TYPE
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_semicolon(p):
	'''
	keyword_semicolon : SEMICOLON
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_lsquare(p):
	'''
	keyword_lsquare : LSQUARE
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_rsquare(p):
	'''
	keyword_rsquare : RSQUARE
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_struct(p):
	'''
	keyword_struct : STRUCT
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_mult(p):
	'''
	op_mult : MULT
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_string_lit(p):
	'''
	string_lit : STRINGLIT
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_func(p):
	'''
	keyword_func : FUNC
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_dot_dot_dot(p):
	'''
	dot_dot_dot : DOT_DOT_DOT
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_var(p):
	'''
	keyword_var : VAR
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_short_assign(p):
	'''
	op_short_assign : SHORT_ASSIGN
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_add(p):
	'''
	op_add : ADD
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_minus(p):
	'''
	op_minus : MINUS
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_or(p):
	'''
	op_or : OR
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_pow(p):
	'''
	op_pow : POW
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_div(p):
	'''
	op_div : DIV
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_mod(p):
	'''
	op_mod : MOD
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_lshift(p):
	'''
	op_lshift : LSHIFT
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_rshift(p):
	'''
	op_rshift : RSHIFT
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_and(p):
	'''
	op_and : AND
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_and_pow(p):
	'''
	op_and_pow : AND_POW
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_or_or(p):
	'''
	op_or_or : OR_OR
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_and_and(p):
	'''
	op_and_and : AND_AND
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_if(p):
	'''
	keyword_if : IF
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_else(p):
	'''
	keyword_else : ELSE
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_switch(p):
	'''
	keyword_switch : SWITCH
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_colon(p):
	'''
	colon : COLON
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_case(p):
	'''
	keyword_case : CASE
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_default(p):
	'''
	keyword_default : DEFAULT
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_for(p):
	'''
	keyword_for : FOR
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_return(p):
	'''
	keyword_return : RETURN
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_eq_eq(p):
	'''
	op_eq_eq : EQ_EQ
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_not_eq(p):
	'''
	op_not_eq : NOT_EQ
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_less(p):
	'''
	op_less : LESS
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_less_eq(p):
	'''
	op_less_eq : LESS_EQ
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_greater(p):
	'''
	op_greater : GREATER
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_greater_eq(p):
	'''
	op_greater_eq : GREATER_EQ
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_not(p):
	'''
	op_not : NOT
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_op_receive(p):
	'''
	op_receive : RECEIVE
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_int_lit(p):
	'''
	int_lit : INTEGERLIT
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_float_lit(p):
	'''
	float_lit : FLOATINGLIT
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_interface(p):
	'''
	keyword_interface : INTERFACE
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_keyword_go(p):
	'''
	keyword_go : GO
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_source_file(p):
	'''
	SourceFile  : PackageClause ImportDeclList TopLevelDeclList
	'''
	global counter
	p[0] = {"label": "SourceFile", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2], p[3]]

def p_package_clause(p):
	'''
	PackageClause  : keyword_package keyword_identifier
	'''
	global counter
	p[0] = {"label": "PackageClause", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2]]

def p_import_decl_list(p):
	'''
	ImportDeclList : ImportDecl ImportDeclList
	               | empty
	'''
	global counter
	p[0] = {"label": "ImportDeclList", "id": str(counter)}
	counter += 1
	if (len(p) == 3):
		p[0]['children'] = [p[1], p[2]]
	else:
		p[0]['children'] = [p[1]]

def p_top_level_decl_list(p):
	'''
	TopLevelDeclList : TopLevelDecl TopLevelDeclList
	                 | empty
	'''
	global counter
	p[0] = {"label": "TopLevelDeclList", "id": str(counter)}
	counter += 1
	if (len(p) == 3):
		p[0]['children'] = [p[1], p[2]]
	else:
		p[0]['children'] = [p[1]]

def p_top_level_decl(p):
	'''
	TopLevelDecl  : Declaration
	              | FunctionDecl
	              | MethodDecl
	              | InterfaceDecl
	              | IFuncDef
	              | StructDef
	'''
	global counter
	p[0] = {"label": "TopLevelDecl", "id": str(counter)}
	counter += 1
	if (len(p) == 2):
		p[0]['children'] = [p[1]]
	elif (len(p) == 2):
		p[0]['children'] = [p[1]]
	elif (len(p) == 2):
		p[0]['children'] = [p[1]]
	elif (len(p) == 2):
		p[0]['children'] = [p[1]]
	elif (len(p) == 2):
		p[0]['children'] = [p[1]]
	else:
		p[0]['children'] = [p[1]]

def p_struct_def(p):
	'''
	StructDef : keyword_type identifier keyword_struct keyword_lcurly ParameterDeclList2 keyword_rcurly
	'''
	global counter
	p[0] = {"label": "StructDef", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2], p[3], p[4], p[5], p[6]]

def p_parameter_decl_list2(p):
	'''
	ParameterDeclList2  : ParameterDecl2 ParameterDeclList2
	                    | empty
	'''
	global counter
	p[0] = {"label": "ParameterDeclList2", "id": str(counter)}
	counter += 1
	if (len(p) == 3):
		p[0]['children'] = [p[1], p[2]]
	else:
		p[0]['children'] = [p[1]]

def p_parameter_decl2(p):
	'''
	ParameterDecl2  : IdentifierList Type
	'''
	global counter
	p[0] = {"label": "ParameterDecl2", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2]]

def p_parameter_dec_list2(p):
	'''
	ParameterDecList2 : ParameterDecl2 ParameterDecList2
	                  | empty
	'''
	global counter
	p[0] = {"label": "ParameterDecList2", "id": str(counter)}
	counter += 1
	if (len(p) == 3):
		p[0]['children'] = [p[1], p[2]]
	else:
		p[0]['children'] = [p[1]]

def p_parameter_decl2(p):
	'''
	ParameterDecl2 : IdentifierList Type
	'''
	global counter
	p[0] = {"label": "ParameterDecl2", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2]]

def p_interface_decl(p):
	'''
	InterfaceDecl : keyword_type identifier keyword_interface interfaceBlock
	'''
	global counter
	p[0] = {"label": "InterfaceDecl", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2], p[3], p[4]]

def p_interface_block(p):
	'''
	
	interfaceBlock  : keyword_lcurly IFuncDecList keyword_rcurly
	'''
	global counter
	p[0] = {"label": "interfaceBlock", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2], p[3]]

def p_i_func_dec_list(p):
	'''
	
	IFuncDecList   : IFuncDec IFuncDecList
	               | empty
	'''
	global counter
	p[0] = {"label": "IFuncDecList", "id": str(counter)}
	counter += 1
	if (len(p) == 3):
		p[0]['children'] = [p[1], p[2]]
	else:
		p[0]['children'] = [p[1]]

def p_i_func_dec(p):
	'''
	
	IFuncDec      : identifier keyword_lparen keyword_rparen Type
	'''
	global counter
	p[0] = {"label": "IFuncDec", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2], p[3], p[4]]

def p_i_func_def(p):
	'''
	IFuncDef      : keyword_func keyword_lparen identifier identifier keyword_rparen IFuncDec Block
	'''
	global counter
	p[0] = {"label": "IFuncDef", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2], p[3], p[4], p[5], p[6], p[7]]

def p_import_decl(p):
	'''
	 
	ImportDecl    : keyword_import ImportSpecTopList
	'''
	global counter
	p[0] = {"label": "ImportDecl", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2]]

def p_import_spec_top_list(p):
	'''
	
	ImportSpecTopList : ImportSpec
	                  | keyword_lparen ImportSpecList keyword_rparen 
	'''
	global counter
	p[0] = {"label": "ImportSpecTopList", "id": str(counter)}
	counter += 1
	if (len(p) == 2):
		p[0]['children'] = [p[1]]
	else:
		p[0]['children'] = [p[1], p[2], p[3]]

def p_import_spec_list(p):
	'''
	ImportSpecList : ImportSpec ImportSpecList
	               | empty
	'''
	global counter
	p[0] = {"label": "ImportSpecList", "id": str(counter)}
	counter += 1
	if (len(p) == 3):
		p[0]['children'] = [p[1], p[2]]
	else:
		p[0]['children'] = [p[1]]

def p_import_spec(p):
	'''
	ImportSpec       :  ImportSpecInit ImportPath
	'''
	global counter
	p[0] = {"label": "ImportSpec", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2]]

def p_import_spec_init(p):
	'''
	ImportSpecInit : keyword_dot
	               | keyword_identifier
	               | empty
	'''
	global counter
	p[0] = {"label": "ImportSpecInit", "id": str(counter)}
	counter += 1
	if (len(p) == 2):
		p[0]['children'] = [p[1]]
	elif (len(p) == 2):
		p[0]['children'] = [p[1]]
	else:
		p[0]['children'] = [p[1]]

def p_import_path(p):
	'''
	ImportPath     : STRINGLIT
	'''
	global counter
	p[0] = {"label" : p[1], "id": str(counter)}
	counter += 1
	p[0]['children'] = []

def p_block(p):
	'''
	Block : keyword_lcurly StatementList keyword_rcurly
	'''
	global counter
	p[0] = {"label": "Block", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2], p[3]]

def p_statement_list(p):
	'''
	StatementList : Statement StatementList 
	              | empty
	'''
	global counter
	p[0] = {"label": "StatementList", "id": str(counter)}
	counter += 1
	if (len(p) == 3):
		p[0]['children'] = [p[1], p[2]]
	else:
		p[0]['children'] = [p[1]]

def p_statement(p):
	'''
	Statement : Declaration 
	          | SimpleStmt 
		  | ReturnStmt 
	          | Block 
	          | IfStmt 
	          | SwitchStmt 
	          | ForStmt
		  | FuncCallStmt
	          | GoFunc
	'''
	global counter
	p[0] = {"label": "Statement", "id": str(counter)}
	counter += 1
	if (len(p) == 2):
		p[0]['children'] = [p[1]]
	elif (len(p) == 2):
		p[0]['children'] = [p[1]]
	elif (len(p) == 2):
		p[0]['children'] = [p[1]]
	elif (len(p) == 2):
		p[0]['children'] = [p[1]]
	elif (len(p) == 2):
		p[0]['children'] = [p[1]]
	elif (len(p) == 2):
		p[0]['children'] = [p[1]]
	elif (len(p) == 2):
		p[0]['children'] = [p[1]]
	elif (len(p) == 2):
		p[0]['children'] = [p[1]]
	else:
		p[0]['children'] = [p[1]]

def p_go_func(p):
	'''
	GoFunc    : keyword_go keyword_func Parameters FunctionBody keyword_lparen ExpressionList keyword_rparen 
	          | keyword_go identifier keyword_lparen ExpressionListBot keyword_rparen
	'''
	global counter
	p[0] = {"label": "GoFunc", "id": str(counter)}
	counter += 1
	if (len(p) == 8):
		p[0]['children'] = [p[1], p[2], p[3], p[4], p[5], p[6], p[7]]
	else:
		p[0]['children'] = [p[1], p[2], p[3], p[4], p[5]]

def p_func_call_stmt(p):
	'''
	FuncCallStmt : identifier keyword_dot FuncCallStmt 
	             | identifier keyword_dot FunctionName keyword_lparen keyword_rparen
	             | identifier keyword_dot FunctionName keyword_lparen ExpressionList keyword_rparen
	             | identifier keyword_dot FunctionName keyword_lparen ObjectMethod keyword_rparen
	'''
	global counter
	p[0] = {"label": "FuncCallStmt", "id": str(counter)}
	counter += 1
	if (len(p) == 4):
		p[0]['children'] = [p[1], p[2], p[3]]
	elif (len(p) == 6):
		p[0]['children'] = [p[1], p[2], p[3], p[4], p[5]]
	elif (len(p) == 7):
		p[0]['children'] = [p[1], p[2], p[3], p[4], p[5], p[6]]
	else:
		p[0]['children'] = [p[1], p[2], p[3], p[4], p[5], p[6]]

def p_object_method(p):
	'''
	ObjectMethod : identifier keyword_dot identifier keyword_lparen ParameterDeclList2 keyword_rparen
	'''
	global counter
	p[0] = {"label": "ObjectMethod", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2], p[3], p[4], p[5], p[6]]

def p_declaration(p):
	'''
	Declaration : ConstDecl 
	            | TypeDecl 
		    | VarDecl
	'''
	global counter
	p[0] = {"label": "Declaration", "id": str(counter)}
	counter += 1
	if (len(p) == 2):
		p[0]['children'] = [p[1]]
	elif (len(p) == 2):
		p[0]['children'] = [p[1]]
	else:
		p[0]['children'] = [p[1]]

def p_const_decl(p):
	'''
	ConstDecl  : keyword_const ConstSpecTopList
	'''
	global counter
	p[0] = {"label": "ConstDecl", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2]]

def p_const_spec_top_list(p):
	'''
	ConstSpecTopList : ConstSpec 
	                 | keyword_lparen ConstSpecList keyword_rparen
	'''
	global counter
	p[0] = {"label": "ConstSpecTopList", "id": str(counter)}
	counter += 1
	if (len(p) == 2):
		p[0]['children'] = [p[1]]
	else:
		p[0]['children'] = [p[1], p[2], p[3]]

def p_const_spec_list(p):
	'''
	ConstSpecList : ConstSpec ConstSpecList 
	              | empty
	'''
	global counter
	p[0] = {"label": "ConstSpecList", "id": str(counter)}
	counter += 1
	if (len(p) == 3):
		p[0]['children'] = [p[1], p[2]]
	else:
		p[0]['children'] = [p[1]]

def p_const_spec(p):
	'''
	ConstSpec : IdentifierList ConstSpecTail
	'''
	global counter
	p[0] = {"label": "ConstSpec", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2]]

def p_const_spec_tail(p):
	'''
	ConstSpecTail : TypeTop op_eq ExpressionList 
	              | empty
	'''
	global counter
	p[0] = {"label": "ConstSpecTail", "id": str(counter)}
	counter += 1
	if (len(p) == 4):
		p[0]['children'] = [p[1], p[2], p[3]]
	else:
		p[0]['children'] = [p[1]]

def p_type_top(p):
	'''
	TypeTop : Type 
	        | empty
	'''
	global counter
	p[0] = {"label": "TypeTop", "id": str(counter)}
	counter += 1
	if (len(p) == 2):
		p[0]['children'] = [p[1]]
	else:
		p[0]['children'] = [p[1]]

def p_identifier_list(p):
	'''
	IdentifierList : identifier IdentifierBotList
	'''
	global counter
	p[0] = {"label": "IdentifierList", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2]]

def p_identifier_bot_list(p):
	'''
	IdentifierBotList :  IdentifierBotList keyword_comma identifier   
	                  | empty
	'''
	global counter
	p[0] = {"label": "IdentifierBotList", "id": str(counter)}
	counter += 1
	if (len(p) == 4):
		p[0]['children'] = [p[1], p[2], p[3]]
	else:
		p[0]['children'] = [p[1]]

def p_expression_list(p):
	'''
	ExpressionList :  Expression ExpressionBotList
	'''
	global counter
	p[0] = {"label": "ExpressionList", "id": str(counter)}
	counter += 1
	p[0]['children'] = [p[1], p[2]]
